create toolbar and frame layout in activity_main.xml

--- a/app/src/main/res/layout-v23/activity_main.xml
+++ b/app/src/main/res/layout-v23/activity_main.xml
@@ -17,8 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:title="Sanjab File"
         android:titleTextColor="@color/white"
-        tools:ignore="HardcodedText"
-        tools:targetApi="m">
+        tools:ignore="HardcodedText">
 
     </Toolbar>
 
